--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:a26fc6899781996041e168ef62c7ccd53b089a018f6c474529e6ef04082c1140
+# hash:sha256:25cccb65f7be111acc5902aecf6ec5da3cfce726a17f58cfac68583e1ff2c382
 FROM registry.codeocean.allenneuraldynamics.org/codeocean/jupyterlab:3.0.9-miniconda4.9.2-python3.8-ubuntu20.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -10,7 +10,7 @@ COPY git-askpass /
 RUN pip3 install -U --no-cache-dir \
     argparse \
     h5py==3.10.0 \
-    imageio \
+    imageio==2.33.0 \
     matplotlib==3.7.4 \
     numpy==1.24.4 \
     scikit-learn==1.3.2 \
