--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:21b84e22625aaeba0aeabbfcfba6dab7b0a742c7d36d18b03e576159881e381f
+# hash:sha256:b4b8f56cd43f16f149e58a66f16793aa623578f0c8eb59919e42813c4b1d1c1c
 FROM registry.codeocean.allenneuraldynamics.org/codeocean/jupyterlab:3.0.9-miniconda4.9.2-python3.8-ubuntu20.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -10,7 +10,7 @@ COPY git-askpass /
 RUN pip3 install -U --no-cache-dir \
     argparse \
     colorcet==3.0.1 \
-    figrid \
+    figrid==0.1.6 \
     h5py==3.10.0 \
     imageio==2.33.0 \
     matplotlib==3.7.4 \
